--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,103 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css2?family=Prompt&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+  integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+
 </head>
+<!-- <div class="wrapper">
+  <header class="header">
+      <img class="icon" src="assets/imgs/PokIcon.svg" alt="">
+      <h1 class="title__page">POKEDEX</h1>
+  </header>
+  <main>
+      <div class="container">
+          <div class="container_left">
+              <div class="cardTitle">
+                  <img class="iconFire" src="assets/imgs/fire_icon-icons.com_70969.png" alt="iconTypePokemon"
+                      class="pokemon__icon">
+                  <h2 class="titleName">CHARIZARD</h2>
+              </div>
+              <div class="imagePK">
+                  <img src="assets/imgs/Mewtow.png" alt="pokemon">
+              </div>
+          </div>
+
+          <div class="container_rigth">
+              <table>
+                  <tr>
+                      <th>NO.</th>
+                      <th>LEVEL</th>
+                  </tr>
+                  <tr>
+                      <td>235</td>
+                      <td>150</td>
+                  </tr>
+              </table>
+              <hr>
+              <table>
+                  <tr>
+                      <th>TYPE</th>
+                      <th>HABILITY</th>
+                  </tr>
+                  <tr>
+                      <td>PSYCHIC</td>
+                      <td>PRESSURE</td>
+                  </tr>
+              </table>
+              <hr>
+              <table>
+                  <tr>
+                      <th>HEIGHT</th>
+                      <th>WEIGHT</th>
+                  </tr>
+                  <tr>
+                      <td>2.0 m</td>
+                      <td>122,0 Kg</td>
+                  </tr>
+              </table>
+          </div>
+
+      </div>
+  </main>
+
+  <footer class="footer">
+      <div class="containerFooter">
+
+          <div class="titleFooter">
+              <h3>OTHERS</h3>
+          </div>
+
+          <div class="footerButtoms">
+              <div class="buttomPK">
+                  <img class="buttomImgPK" src="assets/imgs/sqBlack.png" 
+                  onmouseover="this.src='assets/imgs/sq.png'"
+                  onmouseout="this.src='assets/imgs/sqBlack.png'"/>
+              </div>
+              <div class="buttomPK">
+                  <img class="buttomImgPK" src="assets/imgs/RaichuBlack.png" 
+                  onmouseover="this.src='assets/imgs/Raichu.png'"
+                  onmouseout="this.src='assets/imgs/RaichuBlack.png'"/>
+              </div>
+              <div class="buttomPK">
+                  <img class="buttomImgPK" src="assets/imgs/bbBlack.png" 
+                  onmouseover="this.src='assets/imgs/bb.png'"
+                  onmouseout="this.src='assets/imgs/bbBlack.png'"/>
+              </div>
+              <div class="buttomPK">
+                  <img class="buttomImgPK" src="assets/imgs/ducBlack.png" 
+                  onmouseover="this.src='assets/imgs/duc.png'"
+                  onmouseout="this.src='assets/imgs/ducBlack.png'"/>
+              </div>
+          </div>
+      </div>
+
+
+
+  </footer>
+</div> -->
+
 <body>
   <app-root></app-root>
 </body>
